// Vitest Snapshot v1

exports[`spinnerSegmentHelper > calculateSufficientHightLocation > calculates location correctly 1`] = `48`;

exports[`spinnerSegmentHelper > calculateSufficientHightLocation > calculates location correctly 2`] = `48`;

exports[`spinnerSegmentHelper > calculateSufficientHightLocation > calculates location correctly 3`] = `48`;

exports[`spinnerSegmentHelper > calculateSufficientHightLocation > calculates location correctly 4`] = `48`;

exports[`spinnerSegmentHelper > calculateSufficientHightLocation > calculates location correctly 5`] = `48`;

exports[`spinnerSegmentHelper > calculateSufficientHightLocation > calculates location correctly 6`] = `56.80023279893367`;

exports[`spinnerSegmentHelper > calculateSufficientHightLocation > calculates location correctly 7`] = `92.88393099705036`;

exports[`spinnerSegmentHelper > createSegmentClipPathString > creates correct clippath strings 1`] = `""`;

exports[`spinnerSegmentHelper > createSegmentClipPathString > creates correct clippath strings 2`] = `
"polygon(
      calc(50% + 5px) 0%,
      100% 0%,
      100% 100%,
      calc(50% + 5px) 100%
    )"
`;

exports[`spinnerSegmentHelper > createSegmentClipPathString > creates correct clippath strings 3`] = `
"polygon(
      calc(50% + 2.5px) 50%,
      100% calc(50% - 1.7320508075688767 * (50% - 2.5px)),
      100% calc(50% + 1.7320508075688767 * (50% - 2.5px))
    )"
`;

exports[`spinnerSegmentHelper > createSegmentClipPathString > creates correct clippath strings 4`] = `
"polygon(
      calc(50% + 2.5px) 50%,
      100% calc(50% - 0.9999999999999999 * (50% - 2.5px)),
      100% calc(50% + 0.9999999999999999 * (50% - 2.5px))
    )"
`;

exports[`spinnerSegmentHelper > createSegmentClipPathString > creates correct clippath strings 5`] = `
"polygon(
      calc(50% + 2.5px) 50%,
      100% calc(50% - 0.7265425280053608 * (50% - 2.5px)),
      100% calc(50% + 0.7265425280053608 * (50% - 2.5px))
    )"
`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 1`] = `"rotate(360deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 2`] = `"rotate(180deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 3`] = `"rotate(360deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 4`] = `"rotate(120deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 5`] = `"rotate(240deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 6`] = `"rotate(360deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 7`] = `"rotate(90deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 8`] = `"rotate(180deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 9`] = `"rotate(270deg)"`;

exports[`spinnerSegmentHelper > createSegmentRotationString > creates correct rotation strings 10`] = `"rotate(360deg)"`;
